deployment/searxng/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-svc
  namespace: mimir
  labels:
    app: searxng
spec:
  selector:
    app: searxng
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
