deployment/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: mimir
spec:
  defaultBackend:
    service:
      name: searxng-svc
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - searxng
